--- a/AppRpgEtec/Views/Personagens/ListagemView.xaml
+++ b/AppRpgEtec/Views/Personagens/ListagemView.xaml
@@ -4,6 +4,10 @@
              x:Class="AppRpgEtec.Views.Personagens.ListagemView"
              Title="ListagemView">
 
+    <Shell.TitleView>
+        <Button Command="{Binding NovoPersonagem}" Text="Novo" HorizontalOptions="End"></Button>
+    </Shell.TitleView>
+    
     <ScrollView>
         <VerticalStackLayout Padding="10, 0, 0, 0" VerticalOptions="FillAndExpand">
             <ListView x:Name="listView" HasUnevenRows="True" ItemsSource="{Binding Personagens}" >
