feat(Arma): add weapon registration view

--- a/AppRpgEtec/Views/Armas/ListagemView.xaml
+++ b/AppRpgEtec/Views/Armas/ListagemView.xaml
@@ -4,6 +4,10 @@
              x:Class="AppRpgEtec.Views.Armas.ListagemView"
              Title="ListagemView">
 
+    <Shell.TitleView>
+        <Button Command="{Binding NovaArma}" Text="Novo" HorizontalOptions="End"></Button>
+    </Shell.TitleView>
+
     <ScrollView>
         <VerticalStackLayout Padding="10, 0, 0, 0" VerticalOptions="FillAndExpand">
             <ListView x:Name="listView" HasUnevenRows="True" ItemsSource="{Binding Armas}" >
